--- a/_sass/jekyll-theme-chirpy.scss
+++ b/_sass/jekyll-theme-chirpy.scss
@@ -1,3 +1,5 @@
+---
+---
 /*!
  * The styles for Jekyll theme Chirpy
  *
@@ -22,3 +24,5 @@
   "layout/archives",
   "layout/categories",
   "layout/category-tag";
+ 
+
